fix of css bug of news-headlines boxes: overflow on 1000px screens

--- a/code/style.css
+++ b/code/style.css
@@ -207,7 +207,7 @@ footer p {
   }
 
   .box {
-    margin: 1rem;
+    margin: 0.6rem;
   }
 
   .fun-facts,
